--- a/learning001/learning001/src/main/resources/application.properties
+++ b/learning001/learning001/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=learning001
+
+spring.datasource.url= jdbc:mysql://localhost:3306/test?useSSL=false
+spring.datasource.username= root
+spring.datasource.password= nayan123
+
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto= update
